--- a/getnewz.html
+++ b/getnewz.html
@@ -1,4 +1,4 @@
-<body bgcolor = cyan>
-<font Color = white>Welcome to, <br>
-<font size=65px>Get Newz</font></font>
+<body bgcolor = blue>
+<font Color = white><font size = 75px>Welcome to,</font> <br>
+<center><b><font size=95px>Get Newz</font></font></b></center>
 </body>
