--- a/getnewz.html
+++ b/getnewz.html
@@ -1,4 +1,4 @@
 <body bgcolor = blue>
 <font Color = yellow><font size = 75px>Welcome to,</font> <br>
-<middle></middle><center><b><font size=95px>Get Newz</font></font></b></center></middle>
+</middle><center><b><font size=95px>Get Newz</font></font></b></center>
 </body>
