Update and rename getnewz.html to GamingNewz.html

--- a/GamingNewz.html
+++ b/GamingNewz.html
@@ -1,4 +1,4 @@
 <body bgcolor = blue>
 <font Color = yellow><font size = 95px>Welcome to,</font> <br>
-</middle><center><b><font size=115px>Get Newz</font></font></b></center>
+<i></i><center><b><font size=115px>Get Newz</font></b></center></i>
 </body>
