--- a/gamingnewz.html
+++ b/gamingnewz.html
@@ -1,4 +1,4 @@
 <body bgcolor = blue>
 <font Color = yellow><font size = 95px>Welcome to,</font> <br>
-<i><center><b><font size=115px>Get Newz</font></b></center></i>
+<center><b><font size=115px>FF Newz</font></b></center>
 </body>
